# apc

./: Cargo.toml  README.md  article.html  article.md
apc/: Cargo.toml
apc/src/: error.rs  main.rs  protocol.rs  url.rs
apc/src/cert/: mod.rs
apc/src/cli/: args.rs  mod.rs
apc/src/client/: local.rs  mod.rs  tcp.rs
apc/src/config/: mod.rs
apc/src/output/: json.rs  mod.rs  text.rs
apc/src/registry/: mod.rs
docs/: PROTOCOL.md
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/cert/: ca.rs  mod.rs  types.rs  verify.rs
shared/src/error/: mod.rs
shared/src/protocol/: agent_card.rs  jsonrpc.rs  message.rs  mod.rs  parser.rs  serializer.rs  sse.rs
shared/src/url/: mod.rs  parser.rs
shared/src/util/: config.rs  logging.rs  mod.rs
src/: main.rs  url.rs
tests/: integration_test.sh
