[workspace]
resolver = "2"
members = [
    "shared",
    "apc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Agent Protocol Team"]
license = "MIT"
repository = "https://github.com/yinnho/apc"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "net", "io-util", "sync", "time", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env", "color", "suggestions"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Crypto and certificates
ring = "0.17"
rcgen = "0.13"
x509-parser = "0.16"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Networking
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5"
urlencoding = "2"
regex = "1"
shellexpand = "3.1"

# Internal crates
shared = { path = "shared" }
