[package]
name = "aginx-cli"
version = "0.1.0"
edition = "2021"
description = "Agent protocol client CLI — curl for agent://"
license = "MIT"
repository = "https://github.com/yinnho/agc"
keywords = ["agent", "cli", "aginx", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "agc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
webpki-roots = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
