[package]
name = "shared"
description = "Shared library for Agent Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Crypto
ring = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Networking
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

# Time
chrono = { workspace = true }
humantime = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dirs = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
